tests/baselines/reference/exportInterfaceClassAndValue.errors.txt
exportInterfaceClassAndValue.ts(1,14): error TS2451: Cannot redeclare block-scoped variable 'foo'.
exportInterfaceClassAndValue.ts(2,22): error TS2451: Cannot redeclare block-scoped variable 'foo'.


==== exportInterfaceClassAndValue.ts (2 errors) ====
    export const foo = 1
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'foo'.
    export declare class foo {}
                         ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'foo'.
    export interface foo {}
    